--- a/ltNativeInstallBanner.html
+++ b/ltNativeInstallBanner.html
@@ -36,9 +36,9 @@
         <text>Google Play</text>
     </homepage-banner-platform>
     <homepage-banner-install-button>
-        <a class="homepage-banner-button btn btn--m btn--raised btn--green tc-white"
+        <a class="homepage-banner-button btn btn--m btn--raised btn--green"
            href="{{ YOUR URL TO PLAY MARKET APP }}" target="_blank"
-           itemprop="downloadUrl" ng-click="goMarket();" lx-ripple translate="{{ 'INSTALL' }}">
+           itemprop="downloadUrl" ng-click="goMarket();" lx-ripple>INSTALL
         </a>
     </homepage-banner-install-button>
 </homepage-banner-container>
