--- a/ltNativeInstallBanner.html
+++ b/ltNativeInstallBanner.html
@@ -38,7 +38,7 @@
     <homepage-banner-install-button>
         <a class="homepage-banner-button btn btn--m btn--raised btn--green"
            href="{{ YOUR URL TO PLAY MARKET APP }}" target="_blank"
-           itemprop="downloadUrl" ng-click="goMarket();" lx-ripple>INSTALL
+           itemprop="downloadUrl" ng-click="goMarket();">INSTALL
         </a>
     </homepage-banner-install-button>
 </homepage-banner-container>
